# sandbox-deployment

./: .env.example  .gitignore  API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  RAG_SETUP.md  README.md  agent.yaml  fake_key.pem  grad_agent.txt  pyproject.toml  requirements.txt  token.pickle
Invoice_agent/: .gitignore  agent.py  config.py
Invoice_agent/controllers/: request_handler.py
Invoice_agent/oauth/: __init__.py  auth_manager.py  config.py
Invoice_agent/prompts/: invoice_agent_instruction.py  invoice_extraction_promot_with_flash.py  prompts.py  summary_generation_prompt.py
Invoice_agent/services/: email_service.py  invoice_service.py  oauth_service.py  session_service.py  summary_service.py
Invoice_agent/shared_libraries/: corpus_manager.py
Invoice_agent/test/: agent.py  prompts.py
Invoice_agent/tools/: email_composer.py  file_extractor.py  invoice_parser.py
Invoice_agent/workspace_tools/: email_composer.py  invoice_parser.py
agent/: .env copy  .env.example  __init__.py  agent.py
agent/config/: __init__.py  config.py
agent/oauth/: auth_manager.py  config.py
agent/prompts/: __init__.py  brand_voice_instructions.py  call_of_agents.py  data.py  email_generation_prompt.py  invoice_extraction_prompt_with_pro.py  plan_on_page_instructions.py  prompts.py  pulse_generation_agent.py  work_with_me_instructions.py
agent/sample-templates/: Plan on a Page.md
agent/services/: email_service.py  invoice_service.py  rag_service.py
agent/shared_libraries/: __init__.py
agent/sources/: supported_scopes.json
data/: mock_sent_emails.json
deployment/: deploy.py
example-plans/: plan-001-cloud-storage-launch.md  plan-002-ai-thought-leadership.md  plan-003-developer-conference.md  plan-004-ai-assistant-feature-launch.md  plan-005-partner-ecosystem-campaign.md  plan-006-emea-regional-campaign.md  plan-007-content-series-campaign.md  plan-008-customer-success-campaign.md  plan-009-developer-community-initiative.md  plan-010-end-of-year-campaign.md
(+33 files in other folders)
