[project]
name = "Invoice_Agent"
version = "2.0.0"
description = "An AI powered Invoice Agent built with Google ADK."
readme = "README.md"
packages = [{include = "Invoice_agent"}]

[tool.poetry.dependencies]
python = "^3.10"
google-adk = "^1.0.0"
google-cloud-aiplatform = {extras = ["agent_engines"], version = "^1.93.0"}
google-genai = "^1.16.1"
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"
google-api-python-client = "^2.157.0"  # Updated to match google-adk requirement
google-auth = "^2.30.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"
absl-py = "^2.0.0"
cloudpickle = "^3.1.1"  # Added explicitly
deprecated = "^1.2.14"  # Added missing dependency
protobuf = "^3.20.0"  # Added explicitly
grpcio = "^1.48.0"  # Added explicitly
grpcio-status = "^1.48.0"  # Added explicitly

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"

[tool.poetry.group.deployment]
optional = true

[tool.poetry.group.deployment.dependencies]
# Deployment specific deps if needed

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_google = ["google", "vertexai"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "GOOGLE", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests", "eval"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
